--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -9,23 +9,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textview"
-        android:gravity="center" />
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:textSize="55sp"
+        android:textColor="#FFFFFF"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icone_accueil"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/content_description"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_start"
-        android:gravity="center"
         android:onClick="launchIntent"
-        android:id="@+id/btn_hello_world"/>
-
-
-    <!--<android.support.v7.widget.RecyclerView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/rv_biere"
-
-        />-->
+        android:id="@+id/btn_hello_world"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:textSize="35sp"/>
 
 </LinearLayout>
