--- a/app/src/main/res/layout/rv_serie_element.xml
+++ b/app/src/main/res/layout/rv_serie_element.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rv_serie_element_name"
-        android:textSize="16dp"
+        android:textSize="16sp"
         />
 
 </LinearLayout>
